Fix front page logo sizes at certain dimensions
E.g. at 1090 x 2335, the logos were too wide and overflowed
off the right edge of the page. With this change, they are
correctly constrained at all dimensions I tested.

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -9,7 +9,7 @@
 #header img {
   display: block;
   width: auto;
-  height: calc(min(50vh, 55vw) - 13em);
+  height: calc(min(50vh, 40vw) - 13em);
   margin: auto;
   min-height: 100px;
 }
